--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -721,7 +721,9 @@ h5 {
   color: rgb(255, 255, 255);
 }
 .openAdd:hover {
-  background: #0044ff60;
+  background: #0037cf;
+}
+.openAdd:active {
   scale: 0.98;
 }
 #Proyectos {
