--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -105,28 +105,28 @@ html[data-theme="light"] {
   width: 400px;
 }
 [data-theme="dark"] .opcionesEditarfoto {
-  background: #383838ff;
+  background: transparent;
 }
 [data-theme="dark"] .opcionesEditarfoto:hover {
   background: rgb(109, 109, 109);
 }
 [data-theme="dark"] .ContentSheet {
-  background: #000f16;
+  background: #2b2b2b;
 }
 [data-theme="dark"] .btnCancelarAccionSheet {
   background: var(--border-dark);
   margin: 0 13px;
 }
 [data-theme="dark"] .AccionesAvanzadasEditarFoto {
-  background: #000f16;
+  background: #2b2b2b;
   color: white;
 }
 [data-theme="dark"] .opcionesEditarfoto i {
-  color: #b9b9b9;
+  color: #d8d8d8;
 }
 
 [data-theme="dark"] .opcionesEditarfoto p {
-  color: #d3d3d3;
+  color: #f1f1f1;
 }
 
 /*Editar tarea*/
