--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1061,6 +1061,7 @@ h5 {
   color: rgb(3, 218, 218);
   font-size: 19px;
 }
+
 /*===================================*/
 .options:hover {
   background-color: #020580;
@@ -1113,6 +1114,7 @@ h5 {
   gap: 16px;
   margin-block-end: 8px;
 }
+
 .tiempo {
   border-radius: 10px;
   padding: 10px;
@@ -1121,8 +1123,14 @@ h5 {
   gap: 10px;
   color: #616161;
   cursor: pointer;
+  position: relative;
   box-shadow: 0 0 0 1px gainsboro;
 }
+#datePicker,
+#timePicker {
+  display: none;
+}
+
 .Progmacion {
   display: flex;
   gap: 10px;
