--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -330,4 +330,6 @@ html[data-theme="light"] {
   [data-theme="dark"] .EditarPerfilHeader {
     background: rgba(0, 0, 0, 0.5);
   }
+  [data-theme="dark"] .ContentSheet {
+  }
 }
