--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -25,7 +25,7 @@ h5 {
   position: fixed;
   z-index: 90;
   top: 30px;
-  right: 40px;
+  right: 30px;
   pointer-events: none;
 }
 
@@ -45,13 +45,13 @@ h5 {
   border: 1px solid rgb(189, 186, 186);
 
   opacity: 0;
-  transform: translateX(40px);
+  transform: translateY(-40px);
   transition: opacity 0.4s ease, transform 0.4s ease;
 }
 
 .contentMsg.show {
   opacity: 1;
-  transform: translateX(0);
+  transform: translateY(0);
 }
 .contSuccesSystem {
   display: flex;
@@ -1539,7 +1539,7 @@ h5 {
   z-index: 50;
 }
 .backgrauEditar {
-  background: rgba(0, 0, 0, 0.568);
+  background: rgba(0, 0, 0, 0.26);
   backdrop-filter: blur(2px);
   display: flex;
   justify-content: center;
