--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -1231,7 +1231,7 @@
 .calendar {
   width: 100%;
   max-width: 350px;
-  height: 400px;
+  height: 415px;
   background: #ffffff;
   color: #2b2b2b;
   border-radius: 16px;
@@ -1370,7 +1370,7 @@
   font-size: 15px;
   font-weight: 600;
   color: #1e293b;
-  margin-bottom: 12px;
+  margin-bottom: 30px;
 }
 
 /* BODY */
@@ -1398,7 +1398,7 @@
 .listaHora,
 .listaMinuto {
   width: 88px;
-  max-height: 50px; /* 🔥 NO se sale */
+  max-height: 50px;
   overflow-y: auto;
 
   border-radius: 14px;
@@ -1407,8 +1407,11 @@
 
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
-
+.punt p {
+  margin-top: -20px;
+}
 .listaHora::-webkit-scrollbar,
 .listaMinuto::-webkit-scrollbar {
   width: 0;
