--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -5,7 +5,7 @@
   --card-bg: #f5f5f5;
   --navBar: rgb(9, 9, 10);
   --bordes-nav: rgb(32, 32, 32);
-  --blackfondo: #030303;
+  --blackfondo: #00010a;
 }
 
 body {
@@ -294,7 +294,56 @@ html[data-theme="light"] {
   background: rgba(3, 1, 27, 0.6);
   backdrop-filter: blur(20px);
 }
+/*==============*/
+[data-theme="dark"] .calendar {
+  background: #00010a;
+}
+[data-theme="dark"] #monthYear {
+  color: #fff;
+}
+
+[data-theme="dark"] .calendar-weekdays span {
+  opacity: 0.8;
+  color: #8f8f8f;
+}
+
+[data-theme="dark"] .calendar-days div {
+  color: #fff;
+}
+
+[data-theme="dark"] .reloj {
+  background: #00010a;
+}
+
+[data-theme="dark"] .listaHora {
+  background: #0c1025;
+  border: 1.8px solid #0f172a;
+}
+
+[data-theme="dark"] .listaMinuto {
+  background: #0c1025;
+  border: 1.8px solid #0f172a;
+}
+
+[data-theme="dark"] .opcionHora {
+  color: #fff;
+}
+[data-theme="dark"] .cancelarHora {
+  background: #070c1a;
+  color: #a7a7a7;
+}
+[data-theme="dark"] .reloj-header {
+  color: #ffffff;
+}
+[data-theme="dark"] .opcionHora:hover {
+  background: #262647;
+}
+/*==============*/
 @media (max-width: 700px) {
+  [data-theme="dark"] .contenedorReloj {
+    background: rgba(22, 22, 22, 0.199);
+  }
+  /*==============*/
   [data-theme="dark"] .cuerpo_modal {
     border: 0px solid var(--border-dark);
   }
