--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1324,8 +1324,8 @@ h5 {
   height: 50px;
   width: 100%;
 }
-.Guadar-btn:hover {
-  transform: scale(1.04);
+.Guadar-btn:active {
+  transform: scale(0.98);
 }
 .btnmovil {
   display: none;
@@ -1338,6 +1338,7 @@ h5 {
   border-radius: 12px;
   grid-row: 1 / span 0;
   background: white;
+  padding: 10px;
 }
 
 /*=====================================*/
@@ -1345,6 +1346,7 @@ h5 {
   box-shadow: 0 0 3px gainsboro;
   border-radius: 12px;
   background: white;
+  padding: 10px;
 }
 /*=====================================*/
 .List_check {
@@ -1586,7 +1588,7 @@ h5 {
   cursor: pointer;
 
   transition: transform 0.5s ease;
-  transform-origin: center;
+
   display: flex;
   border-radius: 50%;
   align-items: center;
@@ -1595,7 +1597,7 @@ h5 {
 
 .Closeeditar:hover {
   color: rgb(0, 26, 255);
-  background: #dae0ff;
+
   border-radius: 50%;
 }
 
