--- a/docs/assets/css/theme.css
+++ b/docs/assets/css/theme.css
@@ -308,6 +308,10 @@ html[data-theme="light"] {
   background: #00020f;
   border-color: var(--bordes-nav);
 }
+/*Ajustes Acceso Rapido*/
+[data-theme="dark"] .lineDivSoriaGears {
+  background: var(--bordes-nav);
+}
 /*Mensajes System*/
 [data-theme="dark"] .title_message_advertencia {
   color: #141414;
@@ -397,10 +401,10 @@ html[data-theme="light"] {
 /*==============*/
 @media (max-width: 700px) {
   [data-theme="dark"] .calendar {
-    background: #00063f;
+    background: #000429;
   }
   [data-theme="dark"] .reloj {
-    background: #00063f;
+    background: #000429;
   }
   [data-theme="dark"] .contenedorReloj {
     background: rgba(22, 22, 22, 0.199);
@@ -440,5 +444,12 @@ html[data-theme="light"] {
   }
   [data-theme="dark"] .EditarPerfilHeader {
     background: rgba(0, 0, 0, 0.5);
+  }
+
+  [data-theme="dark"] .options {
+    background: #1d1f4dc9;
+  }
+  [data-theme="dark"] .options2 {
+    background: #1d1f4dc9;
   }
 }
