--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -592,6 +592,7 @@
 .ContenedorSheet {
   position: absolute;
   bottom: 0;
+  width: 100%;
 }
 .CajaSheet {
   position: relative;
@@ -599,9 +600,7 @@
 }
 .ContentSheet {
   position: relative;
-  width: 384px;
   height: 350px;
-
   background: rgb(191, 197, 206);
   transform: translateY(100%);
   border-top-left-radius: 15px;
@@ -777,12 +776,10 @@
   height: 36px;
   font-size: 22px;
   border-radius: 50%;
-  background: #f8faff;
-  color: #008cff;
+  color: #ffffff;
   display: grid;
   justify-content: center;
   align-items: center;
-  border: 4px solid #008cff;
   transition: 0.2s ease;
   cursor: pointer;
 }
@@ -790,6 +787,7 @@
   color: #004458;
 }
 .opcionesCerrar i:active {
+  background: white;
   scale: 0.9;
 }
 .ImagenLightBoxUser {
@@ -1211,7 +1209,7 @@
   width: 100%;
   height: 100%;
 
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0, 0, 0, 0.205);
   backdrop-filter: blur(4px);
 
   display: flex;
@@ -1322,6 +1320,7 @@
   border-radius: 16px;
   cursor: pointer;
 }
+
 .contenedorReloj {
   position: fixed;
   inset: 0;
@@ -1331,7 +1330,7 @@
   justify-content: center;
   align-items: center;
 
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0, 0, 0, 0.205);
   backdrop-filter: blur(4px);
 
   opacity: 0;
@@ -1470,6 +1469,141 @@
   transform: scale(0.97);
 }
 
+/*Editar date/time*/
+.contenedorCalendarioEditar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 30;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.205);
+  backdrop-filter: blur(4px);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.2s ease;
+}
+.contenedorCalendarioEditar.show {
+  pointer-events: auto;
+  opacity: 1;
+}
+.calendarEditar {
+  width: 100%;
+  max-width: 360px;
+  height: 415px;
+  background: #ffffff;
+  color: #2b2b2b;
+  border-radius: 16px;
+  padding: 16px;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+
+  scale: 0.98;
+  transform: translateY(10px);
+  transition: 0.3s ease;
+}
+.calendarEditar.show {
+  transform: translateY(0);
+  scale: 1;
+}
+.calendar-headerEditar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.monthYearEditar {
+  color: #000000;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+}
+.calendar-headerEditar button {
+  background: none;
+  border: none;
+  color: #0026ff;
+  font-size: 26px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.calendar-weekdaysEditar,
+.calendar-daysEditar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
+  gap: 4px;
+}
+.calendar-weekdaysEditar {
+  margin-top: 20px;
+}
+.calendar-weekdaysEditar span {
+  opacity: 0.6;
+  font-size: 15px;
+  margin-bottom: 8px;
+}
+
+.calendar-daysEditar div {
+  padding: 6px 8px;
+  border-radius: 8px;
+  cursor: pointer;
+  color: #000;
+  font-weight: bolder;
+  transition: 0.3s ease;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+}
+
+.calendar-daysEditar div:hover {
+  border: 2px solid rgb(0, 119, 255);
+}
+.calendar-daysEditar div:active {
+  color: rgb(0, 119, 255);
+  box-shadow: 0 0 90px rgb(0, 119, 255);
+}
+
+.calendar-daysEditar .selected {
+  color: rgb(0, 119, 255);
+  background: rgb(0, 119, 255);
+  color: rgb(255, 255, 255);
+}
+
+.calendar-daysEditar div.today {
+  border: 2px solid rgb(0, 119, 255);
+  color: rgb(0, 119, 255);
+  border-radius: 50%;
+}
+
+.calendar-daysEditar div.today.selected {
+  background: #4f7cff;
+  color: white;
+}
+
+.btnsOpcionesCanlndarEditar {
+  display: flex;
+  justify-content: right;
+  position: absolute;
+  right: 15px;
+  bottom: 12px;
+}
+.btnsOpcionesCanlndarEditar button {
+  font-size: 13px;
+  padding: 14px;
+  border: none;
+  font-weight: bold;
+  background: transparent;
+  color: rgb(0, 89, 255);
+  border-radius: 16px;
+  cursor: pointer;
+}
 /*===================================*/
 /* Animaciones */
 
@@ -1853,8 +1987,4 @@
   }
 
   /*==================*/
-
-  .calendar {
-    margin-left: 12px;
-  }
 }
