Integro estilo dark mode

--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -783,11 +783,10 @@
   transition: 0.2s ease;
   cursor: pointer;
 }
-.opcionesCerrar i:hover {
-  color: #004458;
-}
+
 .opcionesCerrar i:active {
-  background: white;
+  background: rgb(255, 254, 243);
+  color: #000000;
   scale: 0.9;
 }
 .ImagenLightBoxUser {
