--- a/docs/assets/css/signup.css
+++ b/docs/assets/css/signup.css
@@ -27,50 +27,55 @@ body {
   color: #e5e7eb;
 }
 
-/*loader spin*/
+/*loader */
+
 .container_loader {
   position: fixed;
-  inset: 0;
-  z-index: 10;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
   display: none;
+  top: 0;
+  left: 0;
 }
-
 .container_loader.show {
   display: block;
 }
-
-.rederigir_login {
+.rederigir_app {
+  position: relative;
   width: 100%;
   height: 100%;
-  background-color: #020c3aab;
-  backdrop-filter: blur(6px);
-  font-family: "Inter";
+  background-color: #00020f;
+  backdrop-filter: blur(5px);
   display: grid;
-  place-items: center;
-  animation: intro 0.5s ease;
+  justify-content: center;
+  align-items: center;
+  animation: intro 0.4s ease;
 }
-
-.conten_loader {
-  display: grid;
-  justify-items: center;
-  gap: 20px;
+.rederigir_app h3 {
+  color: #ffffff;
+  margin-block-end: 20px;
 }
-
 .loader {
-  width: 36px;
-  height: 36px;
-  border: 4px solid rgba(0, 255, 179, 0.25);
-  border-top-color: #00ffb3;
-  border-radius: 50%;
-  animation:
-    spin 0.6s linear infinite,
-    intro 0.5s ease;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
-
-.rederigir_login h3 {
-  color: #00ffb3;
-  font-weight: 500;
-  font-size: 16px;
+.loader samp {
+  width: 14px;
+  height: 14px;
+  background-color: #96deff;
+  border-radius: 50%;
+  animation: loader 0.7s ease infinite alternate;
+}
+.loader samp:first-child {
+  animation-delay: 0ms;
+}
+.loader samp:nth-child(2) {
+  animation-delay: 300ms;
+}
+.loader samp:nth-child(3) {
+  animation-delay: 600ms;
 }
 
 /*Mensaje recover conexión*/
@@ -119,12 +124,15 @@ body {
     opacity: 1;
   }
 }
-@keyframes spin {
+
+@keyframes loader {
   from {
-    transform: rotate(0deg);
+    opacity: 1;
+    scale: 1.12;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 0.2;
+    scale: 0.6;
   }
 }
 
@@ -347,11 +355,6 @@ body {
   }
   .content_msg p {
     margin-top: 6px;
-  }
-
-  .loader {
-    width: 30px;
-    height: 30px;
   }
 
   .rederigir_login h3 {
