--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -43,7 +43,9 @@
 
   transform: scale(0.94);
   opacity: 0;
-  transition: transform 0.35s ease, opacity 0.35s ease;
+  transition:
+    transform 0.35s ease,
+    opacity 0.35s ease;
   box-shadow: 0 18px 40px rgba(0, 0, 0, 0.18);
 }
 
@@ -135,7 +137,9 @@
   font-size: 14px;
   font-weight: 600;
   cursor: pointer;
-  transition: background 0.25s ease, transform 0.15s ease;
+  transition:
+    background 0.25s ease,
+    transform 0.15s ease;
 }
 
 .footer_messageEmergente button:active {
@@ -253,7 +257,9 @@
   opacity: 0;
   pointer-events: none;
   transform: translateY(5%);
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
 }
 .openPerfil {
   cursor: pointer;
@@ -1184,7 +1190,9 @@
   opacity: 0;
   transform: translateY(-10px);
   pointer-events: none;
-  transition: opacity 0.25s ease, transform 0.25s ease;
+  transition:
+    opacity 0.25s ease,
+    transform 0.25s ease;
   border-bottom: 1.5px solid gainsboro;
 }
 
@@ -1404,7 +1412,7 @@
 .reloj {
   width: 320px;
   background: var(--bg-white);
-  border-radius: 18px;
+  border-radius: 30px;
   padding: 30px 16px 30px;
 
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.18);
@@ -1419,7 +1427,6 @@
   opacity: 1;
 }
 
-/* HEADER */
 .reloj-header {
   text-align: center;
   font-size: 15px;
@@ -1428,26 +1435,41 @@
   margin-bottom: 30px;
 }
 
-/* BODY */
 .reloj-body {
-  display: flex;
+  position: relative;
+  display: grid;
   justify-content: center;
   align-items: center;
   gap: 10px;
   margin: 14px 0 18px;
+  box-shadow: 0 0 3px gainsboro;
+  background: #f1f5ff;
+  padding: 20px;
+  border-radius: 10px;
+}
+.horaFormada {
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+}
+.horaFormada h5 {
+  padding: 8px;
+  width: 90px;
+  text-align: center;
+  background: #f1f5ff;
+  border-radius: 10px;
+}
+.selectedHora {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .reloj-body span {
   font-size: 20px;
   font-weight: 600;
   color: #334155;
-}
-
-/* SELECT NATIVO */
-.reloj-body {
-  display: flex;
-  align-items: center;
-  gap: 10px;
 }
 
 .listaHora,
@@ -1462,7 +1484,6 @@
 
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
 }
 .punt p {
   margin-top: -20px;
@@ -1507,7 +1528,9 @@
   font-weight: 600;
 
   cursor: pointer;
-  transition: background 0.15s ease, transform 0.1s ease;
+  transition:
+    background 0.15s ease,
+    transform 0.1s ease;
 }
 
 /* Cancelar */
@@ -1714,23 +1737,8 @@
 }
 
 /*responsing*/
+
 @media (max-width: 480px) {
-  .contenedorReloj {
-    align-items: flex-end;
-  }
-
-  .reloj {
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-    transform: translateY(100%);
-  }
-
-  .reloj.show {
-    transform: translateY(0);
-  }
-}
-
-@media (max-width: 400px) {
   .WarningMessagesSystem {
     align-items: end;
   }
@@ -1772,6 +1780,30 @@
 
   .footer_messageEmergente button {
     padding: 16px;
+  }
+
+  /*=============*/
+  .contenedorReloj {
+    align-items: flex-end;
+  }
+
+  .reloj {
+    width: 100%;
+    height: 360px;
+    border-radius: 26px 26px 0 0;
+    transform: translateY(100%);
+  }
+
+  .reloj.show {
+    transform: translateY(0);
+  }
+  .reloj-header {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .btnsOpcionesReloj button {
+    padding: 16px 0;
+    border-radius: 20px;
   }
 }
 
@@ -2023,12 +2055,10 @@
     height: 28px;
     font-size: 19px;
     border-radius: 50%;
-    background: #000000;
-    color: #008cff;
+    color: #ffffff;
     display: grid;
     justify-content: center;
     align-items: center;
-    border: 2px solid #0088ff;
     transition: 0.2s ease;
     cursor: pointer;
   }
